--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,21 @@
     <artifactId>lesson_5</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--dependencies versions-->
         <selenium-java.version>3.141.59</selenium-java.version>
         <junit-jupiter.version>5.6.1</junit-jupiter.version>
-        <junit-platform-console-standalone.version>1.6.2</junit-platform-console-standalone.version>
         <hamcrest.version>2.2</hamcrest.version>
         <webdrivermanager.version>3.8.1</webdrivermanager.version>
-        <slf4j.version>1.7.30</slf4j.version>
         <!--plugins versions-->
         <maven-compiler.version>3.8.1</maven-compiler.version>
         <java.version>1.8</java.version>
-        <maven-surefire.version>3.0.0-M4</maven-surefire.version>
-        <exec-maven.version>1.6.0</exec-maven.version>
+        <maven-surefire.version>2.22.2</maven-surefire.version>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+
+        <aspectj.version>1.9.4</aspectj.version>
     </properties>
 
     <dependencies>
@@ -29,92 +31,71 @@
             <artifactId>selenium-java</artifactId>
             <version>${selenium-java.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit-jupiter.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-console-standalone</artifactId>
-            <version>${junit-platform-console-standalone.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
         </dependency>
-
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version></version>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.13.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler.version}</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire.version}</version>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Test*.java</include>
                     </includes>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>none</phase>
-                    </execution>
-                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
+
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${exec-maven.version}</version>
-                <executions>
-                    <execution>
-                        <phase>test</phase>
-                        <goals><goal>java</goal></goals>
-                        <configuration>
-                            <mainClass>org.junit.platform.console.ConsoleLauncher</mainClass>
-                            <arguments>
-                                <argument>--scan-class-path</argument>
-                                <argument>${project.build.directory}/test-classes</argument>
-                            </arguments>
-                            <classpathScope>test</classpathScope>
-                            <systemProperties>
-                                <systemProperty>
-                                    <key>file.encoding</key>
-                                    <value>UTF-8</value>
-                                </systemProperty>
-                            </systemProperties>
-                        </configuration>
-                    </execution>
-                </executions>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.10.0</version>
+                <configuration>
+                    <reportVersion>2.13.0</reportVersion>
+                    <resultsDirectory>allure-results</resultsDirectory>
+                </configuration>
             </plugin>
+
         </plugins>
     </build>
 
